# FinLoRA

./: .gitignore  LICENSE  README.md  readthedocs.yml  requirements.txt  run_claude.sh  run_deepseek.sh  run_openai.sh  run_together_ai.sh  setup.sh  sphinx_requirements.txt
compute_dataset_stats/: README.md  XBRL Terminology.csv  compute_stats.py
data/: README.md  create_multitask_datasets.py  dataset_statistics.py  dataset_stats_2.py  gen_fin_data.ipynb  generate_xbrl_extract.ipynb  process_fin_data.ipynb  process_finer.py  process_fnxl.py  process_gemini_format.py  process_multitask_data.py  process_sentiment_train.py  process_xbrl_agent_data.py  process_xbrl_data.py  process_xbrl_extract.py  process_xbrl_extract_find_context.py  process_xbrl_formula.py  process_xbrl_tag.py  process_xbrl_tagging.py  task_clustering.py
data/test/: financebench_test.jsonl  fnxl_test_batched.jsonl  formula_test.jsonl  xbrl_formula_test.jsonl  (+2 more)
demo/: app.py  demo.py
docs/: README.md
finetune/: finetune.py  finetune_configs.json
lora/: config_.json  example_config.yml  finetune.py  finetune_configs.json  finetune_configs_multi.json  finetune_configs_plain.json  finetune_lora_plain.py  script_train.sh  train_lora.py
lora/flowertune-llm/: README.md  pyproject.toml  test.py
lora/flowertune-llm/flowertune_llm/: dataset.py
lora_adapters/: README.md  compute_similarity.py
lora_adaptors/: push_to_hub.py
rebuttal/: 1_Ff4b.md  1_Ff4b_reply.md  1_Ff4b_reply_2.md  2_kedD.md  3_7NRo.md  3_7NRo_reply.md  3_7NRo_reply2.md  4_LcHA.md  7NRo.md  Ff4b.md  LcHA.md  error_update.md  kedD.md
test/: README.md  __init__.py  benchmarks.py  fiqa.py  inference.py  run_all_adapters.sh  run_all_mistral_adapters.sh  run_claude.sh  run_deepseek.sh  run_evaluate.sh  run_few_shot_hf.sh  run_few_shot_llama8b.sh  run_forgetting_test.py  run_mixlora.sh  run_mixtral_test.sh  run_openai.sh  run_test.sh  run_test_all.sh  run_together_ai.sh  run_xbrl_test.sh  test.py  test_all.py  test_dataset.py  test_few_shot.py  test_mixlora_models.py  utils.py  xbrl.py  xlora_test.py
(+190 files in other folders)
