[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowertune-llm"
version = "1.0.0"
description = "FlowerTune LLM: Federated LLM Fine-Tuning with Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets>=0.5.0",
    "torch==2.4.0",
    "trl==0.8.1",
    "bitsandbytes==0.45.4",
    "scipy==1.13.0",
    "peft==0.6.2",
    "fschat[model_worker,webui]==0.2.35",
    "transformers==4.50.3",
    "sentencepiece==0.2.0",
    "omegaconf==2.3.0",
    "hf_transfer==0.1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "flowertune_llm.server_app:app"
clientapp = "flowertune_llm.client_app:app"

[tool.flwr.app.config]
dataset.name = "wangd12/xbrl_analysis_train"
model.name = "meta-llama/Llama-3.1-8B-Instruct"
model.quantization = 8
model.gradient-checkpointing = true
model.lora.peft-lora-r = 8
model.lora.peft-lora-alpha = 32
train.save-every-round = 5
train.learning-rate-max = 1e-4
train.learning-rate-min = 1e-5
train.seq-length = 5120
train.training-arguments.output-dir = ""
train.training-arguments.learning-rate = ""
train.training-arguments.per-device-train-batch-size = 1
train.training-arguments.gradient-accumulation-steps = 2
train.training-arguments.logging-steps = 20
train.training-arguments.num-train-epochs = 1
train.training-arguments.max-steps = 20
train.training-arguments.save-steps = 1000
train.training-arguments.save-total-limit = 20
train.training-arguments.gradient-checkpointing = true
train.training-arguments.lr-scheduler-type = "constant"
strategy.fraction-fit = 0.1
strategy.fraction-evaluate = 0.0
num-server-rounds = 200

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 1.0
